Stopped whitespace from appearing at bottom of page when zoomed

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -3,4 +3,6 @@
   background-size: cover;
 
   flex: 0 1 auto;
+
+  min-height: 100vh;
 }
